js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/top-level-import-defer-empty-str-is-valid-assign-expr.js
import
.
defer
(
'
.
/
empty_FIXTURE
.
js
'
)
;
reportCompare
(
0
0
)
;
