js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-with-expression-import-defer-no-rest-param.js
DONOTEVALUATE
(
)
;
with
(
import
.
defer
(
.
.
.
[
'
.
/
empty_FIXTURE
.
js
'
]
)
)
{
}
